# shinymap

./: .gitattributes  .gitignore  AGENTS.md  AI-ACKNOWLEDGEMENTS.md  CHANGELOG.md  CLAUDE.md  COMMUNICATION.div.input-map-module-ns-20260107-2323.md  COMMUNICATION.div.upstream-fixes-issue-7-10.md  COMMUNICATION.md  CONTRIBUTING.md  LICENSE  Makefile  PROPOSAL.md  README.md  SHINY-FOR-PYTHON.md  SPEC.md  pyproject.toml
.github/workflows/: docs.yml  js-ci.yml  python-ci.yml  python-publish.yml  tag-on-merge.yml
contributing/: agent-workflow.md  api-cookbook.md  build.md  dependencies.md  git-strategy.md  project-structure.md
design/: README.md  aes-payload-v03.md  aes-protocol.md  aes-resolution.md  aesthetic-hierarchy-system.md  count-aesthetic-design.md  geometry-class-refactoring.md  kit-module.md  polymorphic-elements-svgpy.md  props-structure.md  reference-documentation.md  restructuring-toward-v0.3.md  static-map-and-aes-dump.md  svg-subpackage.md  underlay-and-aesthetics.md  update_map_implementation.md
dev/: index.html  search.json
dev/python/: Map.html  Outline.html  PARENT.html  RelativeExpr.html  StillLife.html  Wash.html  aes.ByGroup.html  aes.ByState.html  aes.Indexed.html  aes.Line.html  aes.Shape.html  aes.color.scale_diverging.html  aes.color.scale_qualitative.html  aes.color.scale_sequential.html  index.html  input_map.html  mode.Count.html  mode.Cycle.html  (+9 more)
docs/: _quarto.yml  index.qmd  objects.json
examples/: basic_app.py
scripts/: geojson_to_svg_paths.py  refresh_geometry.sh
www/: package-lock.json  package.json  tsconfig.json
(+38 files in other folders)
