[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shinyjpmap"
version = "0.0.1"
description = "Shiny for Python input component: Japan prefecture map (React)"
authors = [{ name = "Kenji Sato" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "htmltools>=0.6.0",
    "shiny>=1.5.0",
]

[tool.hatch.build]
include = [
  "src/shinyjpmap/**",
  "www/dist/**",
  "scripts/geojson_to_svg_paths.py",
]

[project.urls]
Homepage = "https://github.com/kenjisato/shinyjpmap"

[tool.hatch.build.targets.wheel]
packages = ["src/shinyjpmap"]
include = ["src/shinyjpmap/**", "www/dist/**"]
