[project]
name = "shinymap-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.sources]
shinymap = { workspace = true }
shinymapjp = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/shinymap/python",
  "packages/shinymapjp/python",
]

[dependency-groups]
dev = [
    "svgpathtools>=1.7.2",
]
